--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,28 @@
-name: generate-snake
+name: Generate Snake Animation
 
 on:
   schedule:
-    # 每 6 小时，执行一次
-    - cron: "0 */6 * * *"
+    - cron: "0 */12 * * *"
   workflow_dispatch:
 
 jobs:
-  generate-snake:
+  build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
-      - uses: Platane/snk@master
+
+      - uses: Platane/snk@v3
+        id: snake-gif
         with:
-          # 你的 GitHub 的名称
-          github_user_name: Mystic-stars
-          # 生成的 .gif 图存储的位置
-          gif_out_path: dist/github-snake.gif
-          # 生成的 .gif 图存储的位置
-          svg_out_path: dist/github-snake.svg
-      - uses: crazy-max/ghaction-github-pages@v2.5.0
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#FF69B4&color_dots=#161B22,#39D353,#26A641,#006D32,#0E4429
+
+      - name: Push to output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
